--- a/index.html
+++ b/index.html
@@ -8,14 +8,40 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
+      background-image: url('Starry-Night-Clouds-Wallpaper-Mural.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1em;
+      background: rgba(0, 0, 0, 0.6);
+    }
+    .menu-button {
+      font-size: 1.5em;
+      cursor: pointer;
+    }
+    .title {
+      font-size: 1.5em;
+      text-align: center;
+      flex: 1;
+    }
+    .tab {
+      display: none;
+      padding: 1em;
+      margin-bottom: 3em;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .active {
+      display: block;
     }
     nav {
       display: flex;
       justify-content: space-around;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #222;
+      background: rgba(0, 0, 0, 0.7);
       color: white;
     }
     nav button {
@@ -27,21 +53,24 @@
       font-size: 1em;
     }
     nav button:hover {
-      background-color: #444;
-    }
-    .tab {
-      display: none;
-      padding: 1em;
-      margin-bottom: 3em;
-    }
-    .active {
-      display: block;
+      background-color: rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
 <body>
+  <header>
+    <div class="menu-button" onclick="showTab('home')">☰</div>
+    <div class="title">H.H.A.Y</div>
+  </header>
+
+  <nav>
+    <button onclick="showTab('wetter')">Wetter</button>
+    <button onclick="showTab('position')">Position</button>
+    <button onclick="showTab('info')">Info</button>
+  </nav>
+
   <div id="home" class="tab active">
-    <h1>Willkommen zur Höhenmessgerät-Webseite</h1>
+    <h1>Willkommen bei H.H.A.Y</h1>
     <p>Diese Webseite liefert Echtzeitdaten zu Wetter, Position und mehr.</p>
   </div>
 
@@ -61,20 +90,12 @@
     <p>Dieses Projekt ist Teil des Höhenmessgerät-Systems und zeigt relevante Live-Daten.</p>
   </div>
 
-  <nav>
-    <button onclick="showTab('home')">Home</button>
-    <button onclick="showTab('wetter')">Wetter</button>
-    <button onclick="showTab('position')">Position</button>
-    <button onclick="showTab('info')">Info</button>
-  </nav>
-
   <script>
     function showTab(tabId) {
       document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
     }
 
-    // Standort abrufen
     function updateLocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(position => {
@@ -83,15 +104,20 @@
           const alt = position.coords.altitude !== null ? `${position.coords.altitude.toFixed(2)} m` : "(keine Höhendaten verfügbar)";
           document.getElementById("location").textContent = `Breite: ${lat}, Länge: ${lon}, Höhe: ${alt}`;
 
-          // Wetterdaten holen (Beispiel mit OpenWeatherMap)
-          const apiKey = "7fff3250a026fe0dfdc8fe66844443d0"; // Trage hier deinen API-Schlüssel ein
+          const apiKey = "7fff3250a026fe0dfdc8fe66844443d0";
           fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric&lang=de`)
             .then(response => response.json())
             .then(data => {
+              if (data.cod !== 200) {
+                document.getElementById("weather").textContent = `Fehler: ${data.message}`;
+                console.error("Wetter-API-Fehler:", data);
+                return;
+              }
               const weatherText = `${data.weather[0].description}, ${data.main.temp} °C`;
               document.getElementById("weather").textContent = weatherText;
             })
-            .catch(() => {
+            .catch(err => {
+              console.error("Netzwerkfehler:", err);
               document.getElementById("weather").textContent = "Wetterdaten konnten nicht geladen werden.";
             });
         }, () => {
@@ -104,7 +130,6 @@
       }
     }
 
-    // Beim Laden der Seite
     window.onload = updateLocation;
   </script>
 </body>
