--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('Starry-Night-Clouds-Wallpaper-Mural.jpg');
+      background-image: url('https://www.muralsyourway.com/media/amasty/webp/catalog/product/cache/6a1b84592dbb2f17f99e83b58a6f1a1d/1/9/19166604_cloudy-night-sky-with-stars-mural.jpg.webp');
       background-size: cover;
       background-position: center;
       color: white;
