--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Höhenmessgerät</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    body {
       font-family: Arial, sans-serif;
       background-image: url('background.jpg');
       background-size: cover;
-      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: top center;
       color: white;
     }
     header {
