Added Team Info again

--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
 
   <div id="info" class="tab">
     <h2>Infos zum Projekt</h2>
-    <p>Ersteller: Dein Name oder Team</p>
+    <p>Team:</p>
+    <p>H.H.A.Y</p>
+    <p>- Nathanael Meyer</p>
+    <p>- Kimo Ledermann</p>
+    <p>- Ida Herger</p>
     <p>Dieses Projekt ist Teil des Höhenmessgerät-Systems und zeigt relevante Live-Daten.</p>
   </div>
 
