--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <p><strong>Ort:</strong> ${data.name}</p>
                 <p><strong>Temperatur:</strong> ${data.main.temp} °C</p>
                 <p><strong>Gefühlt:</strong> ${data.main.feels_like} °C</p>
-                <p><strong>Min/Max:</strong> ${data.main.temp_min} °C / ${data.main.temp_max} °C</p>
+                <p><strong>Min/Max (aktuell):</strong> ${data.main.temp_min} °C / ${data.main.temp_max} °C</p>
                 <p><strong>Luftdruck:</strong> ${data.main.pressure} hPa</p>
                 <p><strong>Luftfeuchtigkeit:</strong> ${data.main.humidity} %</p>
                 <p><strong>Windgeschwindigkeit:</strong> ${data.wind.speed} m/s</p>
@@ -166,7 +166,6 @@
                 <p><strong>Schnee:</strong> ${data.snow ? data.snow["1h"] + " mm (1h)" : "Keine Daten"}</p>
                 <p><strong>Beschreibung:</strong> ${data.weather[0].description}</p>
                 <p><strong>Wetter-ID:</strong> ${data.weather[0].id}</p>
-                <p><strong>Icon:</strong> <img src="https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png" alt="Wettericon"></p>
                 <p><strong>UTC-Offset:</strong> ${data.timezone >= 0 ? '+' : '-'}${Math.abs(data.timezone / 3600)}h</p>
               `;
               document.getElementById("weather").innerHTML = weatherHTML;
