--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     <p id="location">Lade Standort...</p>
     <h2>Gemessene Höhe</h2>
     <p id="hoehenwert">Lade Daten...</p>
+    <h3>Sensorwerte</h3>
+    <p>OPV-Höhe: <span id="opv_hoehe">-</span></p>
+    <p>Analoge Höhe: <span id="analog_hoehe">-</span></p>
   </div>
 
   <div id="info" class="tab">
@@ -145,19 +148,30 @@
   const db = getDatabase(app);
 
   async function ladeFirebaseHoehe() {
-    try {
-      const snapshot = await get(ref(db, "daten"));
-      if (snapshot.exists()) {
-        const data = snapshot.val();
+  try {
+    const snapshot = await get(ref(db, "daten"));
+    if (snapshot.exists()) {
+      const data = snapshot.val();
+
+      // Optional: fallback für alte Datenstruktur
+      if (data.opv_hoehe !== undefined && data.analog_hoehe !== undefined) {
+        document.getElementById("hoehenwert").innerText = "Daten vom Sensor vorhanden:";
+        document.getElementById("opv_hoehe").innerText = `${data.opv_hoehe.toFixed(1)} m`;
+        document.getElementById("analog_hoehe").innerText = `${data.analog_hoehe.toFixed(1)} m`;
+      } else if (data.hoehe !== undefined) {
         document.getElementById("hoehenwert").innerText = `Gemessene Höhe (ESP32): ${data.hoehe} m`;
       } else {
-        document.getElementById("hoehenwert").innerText = "Keine Höhendaten gefunden.";
+        document.getElementById("hoehenwert").innerText = "Keine gültigen Höhendaten vorhanden.";
       }
-    } catch (error) {
-      console.error("Firebase-Fehler:", error);
-      document.getElementById("hoehenwert").innerText = "Fehler beim Laden der Gerätedaten.";
+    } else {
+      document.getElementById("hoehenwert").innerText = "Keine Höhendaten gefunden.";
     }
+  } catch (error) {
+    console.error("Firebase-Fehler:", error);
+    document.getElementById("hoehenwert").innerText = "Fehler beim Laden der Gerätedaten.";
   }
+}
+
 
   // Alle 60 Sekunden laden
   setInterval(ladeFirebaseHoehe, 60000);
