--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <button id="btn-home" onclick="showTab('home'); toggleSidebar();">Home</button>
     <button id="btn-wetter" onclick="showTab('wetter'); toggleSidebar();">Wetter</button>
     <button id="btn-position" onclick="showTab('position'); toggleSidebar();">Position</button>
+    <button id="btn-settings" onclick="showTab('settings'); toggleSidebar();">Einstellungen</button>
     <button id="btn-info" onclick="showTab('info'); toggleSidebar();">Info</button>
   </div>
 
@@ -113,6 +114,14 @@
     <h3>Sensorwerte</h3>
     <p>OPV-Höhe: <span id="opv_hoehe">-</span></p>
     <p>Analoge Höhe: <span id="analog_hoehe">-</span></p>
+  </div>
+
+  <div id="settings" class="tab">
+    <h2>Einstellungen</h2>
+    <p>Hier kannst du Steuerbefehle an das Gerät senden.</p>
+
+    <button onclick="resetWifi()">🔁 WLAN-Verbindung neu starten</button>
+    <!-- Weitere Buttons könnten hier folgen -->
   </div>
 
   <div id="info" class="tab">
@@ -176,6 +185,21 @@
   setInterval(ladeFirebaseHoehe, 10000); 
   // Beim Start direkt laden
   ladeFirebaseHoehe();
+
+
+import { set, ref as dbRef } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
+
+async function resetWifi() {
+  try {
+    await set(dbRef(db, "reset_wifi"), true);
+    alert("📡 WLAN-Neustart wurde ausgelöst.");
+  } catch (error) {
+    alert("⚠️ Fehler beim Senden des Neustarts.");
+    console.error(error);
+  }
+}
+
+
 </script>
 
 <script>
