--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
   <div id="settings" class="tab">
     <h2>Einstellungen</h2>
     <p>Hier kannst du Steuerbefehle an das Gerät senden.</p>
+    <h3>Status</h3>
+    <p id="wifi_status">Lade WLAN-Status...</p>
 
     <button onclick="resetWifi()">🔁 WLAN-Verbindung neu starten</button>
     <!-- Weitere Buttons könnten hier folgen -->
@@ -187,6 +189,26 @@
       console.error(error);
     }
   }
+
+  //Funktion für den WIFI Status
+  async function ladeWifiStatus() {
+  try {
+    const snapshot = await get(ref(db, "wifi"));
+    if (snapshot.exists()) {
+      const data = snapshot.val();
+      document.getElementById("wifi_status").innerText =
+        `Verbunden mit: ${data.ssid}, IP: ${data.ip}`;
+    } else {
+      document.getElementById("wifi_status").innerText = "Kein Status verfügbar.";
+    }
+  } catch (err) {
+    document.getElementById("wifi_status").innerText = "Fehler beim Abrufen.";
+    console.error("WiFi-Status Fehler:", err);
+  }
+}
+
+setInterval(ladeWifiStatus, 10000);
+ladeWifiStatus();
 
   // globale Funktion für Button-Zugriff
   window.resetWifi = resetWifi;
@@ -264,6 +286,27 @@
       document.getElementById("location").textContent = "Geolocation wird nicht unterstützt.";
     }
   }
+
+  let einstellungenFreigegeben = false;
+
+  function showTab(tabId) {
+    if (tabId === "settings" && !einstellungenFreigegeben) {
+      const pass = prompt("🔐 Bitte Passwort eingeben:");
+      if (pass !== "how high are you") {
+        alert("❌ Falsches Passwort.");
+        return;
+      }
+      einstellungenFreigegeben = true;
+    }
+
+    document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+    document.getElementById(tabId).classList.add('active');
+
+    document.querySelectorAll('.sidebar button').forEach(btn => btn.classList.remove('active-tab'));
+    const activeBtn = document.getElementById('btn-' + tabId);
+    if (activeBtn) activeBtn.classList.add('active-tab');
+  }
+
 
   window.onload = () => {
     updateLocation();
